--- a/8WeekLearning/week1/week1.kataprac2.html
+++ b/8WeekLearning/week1/week1.kataprac2.html
@@ -16,24 +16,29 @@
                 <ul>
                     <li>
                         <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="news-box">
+                        <div class="content">
                             <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi mollitia ipsam
-                                commodi perspiciatis rerum.</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quos impedit dolore
+                                eligendi maiores velit!</p>
                         </div>
                     </li>
                     <li>
                         <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="news-box">
+                        <div class="content">
                             <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi mollitia ipsam
-                                commodi perspiciatis rerum.</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quos impedit dolore
+                                eligendi maiores velit!</p>
                         </div>
                     </li>
                 </ul>
             </div>
+            <div class="img216">
+                <img src="https://fakeimg.pl/216/" alt="">
+            </div>
         </main>
-        <footer></footer>
+        <footer>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </footer>
     </div>
 
 </body>
