--- a/8WeekLearning/week1/week1.kataprac2.html
+++ b/8WeekLearning/week1/week1.kataprac2.html
@@ -11,34 +11,33 @@
 
 <body>
     <div class="wrap">
-        <main>
+        <div class="header">
             <div class="news">
                 <ul>
                     <li>
                         <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="content">
+                        <div class="news-content">
                             <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quos impedit dolore
-                                eligendi maiores velit!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa nemo mollitia
+                                doloremque, impedit earum.</p>
                         </div>
                     </li>
                     <li>
                         <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="content">
+                        <div class="news-content">
                             <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident quos impedit dolore
-                                eligendi maiores velit!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa nemo mollitia
+                                doloremque, impedit earum.</p>
                         </div>
                     </li>
                 </ul>
+                <div class="ad"><img src="https://fakeimg.pl/216/" alt=""></div>
             </div>
-            <div class="img216">
-                <img src="https://fakeimg.pl/216/" alt="">
-            </div>
-        </main>
-        <footer>
-            <p>Lorem ipsum dolor sit amet.</p>
-        </footer>
+
+        </div>
+        <div class="footer">
+            <p>表尾文字</p>
+        </div>
     </div>
 
 </body>
