--- a/8WeekLearning/week1/week1.kataprac2.html
+++ b/8WeekLearning/week1/week1.kataprac2.html
@@ -10,33 +10,31 @@
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="header">
-            <div class="news">
-                <ul>
-                    <li>
-                        <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="news-content">
-                            <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa nemo mollitia
-                                doloremque, impedit earum.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://fakeimg.pl/96/" alt="">
-                        <div class="news-content">
-                            <h2>the title</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa nemo mollitia
-                                doloremque, impedit earum.</p>
-                        </div>
-                    </li>
-                </ul>
-                <div class="ad"><img src="https://fakeimg.pl/216/" alt=""></div>
-            </div>
 
+    <div class="wrap">
+        <div class="news">
+            <ul class="news-list">
+                <li>
+                    <img src="https://fakeimg.pl/96/" alt="">
+                    <div class="news-item">
+                        <h2>the title</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, provident eum officia
+                            hic minima excepturi.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://fakeimg.pl/96/" alt="">
+                    <div class="news-item">
+                        <h2>the title</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, provident eum officia
+                            hic minima excepturi.</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="ad"><img src="https://fakeimg.pl/216/" alt=""></div>
         </div>
         <div class="footer">
-            <p>表尾文字</p>
+            <p>Lorem ipsum dolor sit amet.</p>
         </div>
     </div>
 
