--- a/8WeekLearning/week1/week1_resume.html
+++ b/8WeekLearning/week1/week1_resume.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
     <div class="skills">
-        <h2>技能 <span>SKILLS</span></h2>
+        <h2 class="skills-footer-h2">技能 <span>SKILLS</span></h2>
         <ul>
             <li>Adobe PhotoShop</li>
             <li>Adobe Illustrator</li>
@@ -72,10 +72,10 @@
     </div>
 
     <div class="footer">
-        <h2>聯絡方式 <span>CONTACT METHOD</span></h2>
+        <h2 class="skills-footer-h2">聯絡方式 <span>CONTACT METHOD</span></h2>
         <ul>
-            <li>Mail：xxxd@hexschool.com</li>
-            <li>Phone：0910123456</li>
+            <li><a href="#">Mail：xxxd@hexschool.com</a></li>
+            <li><a href="#">Phone：0910123456</a></li>
             <li>Kaohsiung, Taiwan</li>
             <li>作品連結：<a href="#">https://www.behance.net/xxxdddddd</a></li>
         </ul>
